src/styles/_item.sass
/* Listing item */
.item-title
	text-decoration: none
	font-family: $font-headings

	em
		color: $color-secondary
		font-style: normal

.item-media
	display: flex
	align-items: center
	justify-content: center
	background-color: $color-background-dark

	iframe, img
		max-width: 100%

$item-thumbnail-size: 90px
.item-thumbnail
	position: relative
	display: flex
	align-items: center
	justify-content: center
	width: $item-thumbnail-size
	min-width: $item-thumbnail-size
	overflow: hidden
	background-color: $color-background
	border-top-left-radius: 3px
	border-bottom-left-radius: 3px

	&.has-thumbnail
		background-color: transparent

	+media-xs
		width: 100%
		max-height: initial
		margin: 0

		img
			width: 100%

	img
		position: absolute
		width: 100%
		height: $item-thumbnail-size
		transition: transform 150ms ease-in-out
		border-radius: 50%
		box-shadow: 2px 2px 0 rgba(black, .1)
		background-color: $color-background

.item-content
	display: flex
	align-items: center
	width: 100%

.item-rating-box
	display: flex
	flex-direction: column
	height: 100%
	width: 40px
	min-width: 40px

	+media-xs
		width: 60px
		min-width: 60px

	&.rated.positive .up
		color: $color-vote-up
	&.rated.negative .down
		color: $color-vote-down

.item-rating
	display: flex
	align-items: center
	justify-content: center
	height: 100%

	+media-xs
		padding: 3px 0

	&.up, &.down
		font-size: 1.33em
		cursor: pointer

	&.up:hover
		color: $color-vote-up
	&.down:hover
		color: $color-vote-down

	&.value
		color: $color-text-light
		font-size: $font-size-small

.item-details
	display: flex
	flex-direction: column
	justify-content: space-around
	flex: 1
	padding: 7px

	> ul
		margin: 0
		padding: 0
		> li
			margin: 0
			padding: 0
			display: inline-block
			font-size: $font-size-small
			padding: 5px 4px
			color: $color-text-light

			&:before
				content: '·'
				font-weight: bolder
				position: relative
				left: -6px
				top: 1px
				color: $color-text-hint

			&:first-child
				padding-left: 0
				&:before
					content: ''
					padding: 0

			a
				text-decoration: none
				color: $color-text-light
				&:hover
					color: $color-primary

			img
				display: inline-block
				vertical-align: middle
				border-radius: 3px
				position: relative
				top: -2px
				opacity: .8

				&:hover
					opacity: 1

.item-body
	padding: 10px 20px
	font-size: $font-size
	line-height: 1.5em

#item-comments
	margin: 10px 15px

/* Edit */
.item-edit
	&-header
		display: flex
		align-items: center
		padding: 20px 10px

		&-action
			margin-left: auto

			.btn
				margin-left: 10px

	&-form
		form
			display: flex
			flex-direction: column

			#name
				color: $color-primary
				background-color: $color-background-light
				padding: 10px

			#content
				padding: 10px

			textarea#content
				min-height: 150px

			span.content-extra
				font-size: $font-size-smaller
				text-align: right
				padding: 5px 10px

				a
					color: $color-text-hint
					&:hover
						color: $color-primary

			#category
				padding: 10px
				margin: 10px

			#status, #post_type
				visibility: hidden
				display: none

			.form-upload-file
				padding: 10px 5px

			input, textarea
				margin: 5px 10px

			.input-content
				display: flex
				flex-direction: column

				input, textarea
					display: none
					visibility: hidden
					background-color: $color-background-light

			.fileupload
				box-shadow: none

	/* Tabs for Link/Text */
	&-tabs
		list-style-type: none
		margin: 0
		padding: 0
		display: flex

		> li
			flex: 1
			padding: 10px 15px
			background-color: $color-background-dark
			border-top: 5px solid darken($color-background-dark, 10%)
			color: darken($color-background-dark, 35%)
			cursor: pointer
			user-select: none
			margin-bottom: 15px

			&:hover
				color: $color-primary
				border-top: 5px solid rgba($color-secondary, .25)

			span
				display: block
				font:
					size: $font-size-large
					family: $font-headings

			small
				font-size: $font-size-small

			&.active
				background-color: $color-background
				border-color: $color-secondary
				color: $color-primary
				span
					color: $color-secondary

	&-tab
		&.link
			.input-content.link input#content
				visibility: visible
				display: block
			.input-content.text textarea#content,
			span.content-extra
				visibility: hidden
				display: none

		&.text
			.input-content.text textarea#content
				visibility: visible
				display: block
			.input-content.link input#content
				visibility: hidden
				display: none

